--- a/CSS/style.css
+++ b/CSS/style.css
@@ -167,3 +167,10 @@
     font-size: 20px;
     padding: 5px;
 }
+
+footer p{
+    background-color: rgb(141, 135, 135);
+    text-align: center;
+    color: white;
+    padding: 3px 0;
+}
