--- a/CSS/about.css
+++ b/CSS/about.css
@@ -67,8 +67,7 @@ body {
 }
 
 .pr {
-    color: #ad95d8;
-    ;
+    color: #0a0b0b;;
     line-height: 30px;
     font-weight: 600;
     word-spacing: 3px;
@@ -113,6 +112,7 @@ body {
     width: 300px;
     padding: 0 30px;
     padding-top: 60px;
+    background-color: aquamarine;
 }
 
 
@@ -169,7 +169,7 @@ body {
 }
 
 .fourth-section .prog {
-    background-color: rgb(245, 239, 239);
+    background-color: rgb(237, 172, 172);
     box-shadow: 0 0 10px 10px rgb(231, 210, 210);
     width: 6000px;
     height: 500px;
@@ -189,4 +189,18 @@ body {
     color: aqua;
 
 }
+.design{
+    width: 80px;
+    height: 80px;
+}
+progress{
+    width: 100%;
+    height: 30px;
+}
+.butt{
+    text-decoration: none;
+    color:blue;
+    font-size: 20px;
+    margin-top: 10px;
 
+}
